tests/security/taintedCurlInit/output.txt
ERROR: TaintedData - input.hack:1:17 - Detected tainted network request